--- a/templates/fp.html
+++ b/templates/fp.html
@@ -4,21 +4,37 @@
     View my fingerprint - FP Central
 {% endblock %}
 
-{% block head %}
-    {{ super() }}
+{% block content %}
+    <button class="btn btn-primary btn-lg" type="button" onclick="api.run()">Run</button>
+    <button class="btn btn-primary btn-lg" type="button" onclick="api.store()">Store</button>
+    <button class="btn btn-primary btn-lg" type="button" onclick="api.stats()">Stats</button>
 
-    <!-- Meta variable containing all the variables of the current fingerprint -->
-    <script type="text/javascript">
-        var fp = {};
-    </script>
+    <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Value</th>
+                <th>%</th>
+            </tr>
+        </thead>
+        <tbody id="attributes">
+        {% for var in variables %}
+            {% for variable in var %}
+            <tr>
+                <td>{{ variable }}</td>
+                <td id="{{ variable + "Val" }}"></td>
+                <td id="{{ variable + "Per" }}"></td>
+            </tr>
+            {% endfor %}
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <!-- Load the FP Central API -->
+    <script type="text/javascript" src="{{ url_for('static', filename="js/clientAPI.js") }}"></script>
+
     <!-- Scripts to collect the attributes of a fingerprint -->
     {% for file in files %}
     <script type="text/javascript" src="{{ url_for('site.static', filename=file) }}"></script>
     {% endfor %}
-{% endblock %}
-
-{% block content %}
-    <script type="text/javascript">
-        console.log(fp);
-    </script>
 {% endblock %}
