--- a/templates/fp.html
+++ b/templates/fp.html
@@ -5,10 +5,31 @@
 {% endblock %}
 
 {% block content %}
-    <button class="btn btn-primary btn-lg" type="button" onclick="api.run()">Run</button>
     <button class="btn btn-primary btn-lg" type="button" onclick="api.store()">Store</button>
     <button class="btn btn-primary btn-lg" type="button" onclick="api.stats()">Stats</button>
 
+    <h1>HTTP headers</h1>
+    <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Value</th>
+                <th>%</th>
+            </tr>
+        </thead>
+        <tbody id="headers">
+        {% for header in headers %}
+            <tr>
+                <td>{{ header[0] }}</td>
+                <td id="{{ header[0] + "Val" }}">{{ header[1] }}</td>
+                <td id="{{ header[0] + "Per" }}"></td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <h1>JavaScript</h1>
+    <button class="btn btn-primary btn-lg" type="button" onclick="api.run()">Run JavaScript tests</button>
     <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
         <thead>
             <tr>
@@ -37,4 +58,5 @@
     {% for file in files %}
     <script type="text/javascript" src="{{ url_for('site.static', filename=file) }}"></script>
     {% endfor %}
+
 {% endblock %}
