--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -10,3 +10,11 @@ body {
   src: local('Roboto'), local('Roboto-Regular'), url("../fonts/Roboto.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
+.btn {
+  font-size: 15px;
+}
+
+.navbar .nav > li > a{
+  font-size: 14px;
+}
