--- a/templates/fp.html
+++ b/templates/fp.html
@@ -1,55 +1,64 @@
 {% extends "base.html" %}
+{% set active_page = "fp" %}
 
 {% block title %}
     View my fingerprint - FP Central
 {% endblock %}
 
 {% block content %}
-    <button class="btn btn-primary btn-lg" type="button" onclick="api.store()">Store</button>
-    <button class="btn btn-primary btn-lg" type="button" onclick="api.stats()">Stats</button>
+    <div class="btn-group btn-group-justified" role="group">
+        <a id="runBtn" class="btn btn-info" type="button" onclick="api.run()"><span class="badge">1</span> <strong>Run JavaScript tests</strong></a>
+        <a id="sendBtn" class="btn btn-info disabled" type="button" onclick="api.store()"><span class="badge">2</span> <strong>Send to server</strong></a>
+        <a id="statsBtn" class="btn btn-info disabled" type="button" onclick="api.stats()"><span class="badge">3</span> <strong>Get statistics</strong></a>
+    </div>
 
-    <h1>HTTP headers</h1>
-    <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Value</th>
-                <th>%</th>
-            </tr>
-        </thead>
-        <tbody id="headers">
-        {% for header in headers %}
-            <tr>
-                <td>{{ header[0] }}</td>
-                <td id="{{ header[0] + "Val" }}">{{ header[1] }}</td>
-                <td id="{{ header[0] + "Per" }}"></td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <br>
 
-    <h1>JavaScript</h1>
-    <button class="btn btn-primary btn-lg" type="button" onclick="api.run()">Run JavaScript tests</button>
-    <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Value</th>
-                <th>%</th>
-            </tr>
-        </thead>
-        <tbody id="attributes">
-        {% for var in variables %}
-            {% for variable in var %}
-            <tr>
-                <td>{{ variable }}</td>
-                <td id="{{ variable + "Val" }}"></td>
-                <td id="{{ variable + "Per" }}"></td>
-            </tr>
+    <div class="panel panel-default">
+        <div class="panel-heading"><h2>HTTP headers</h2></div>
+        <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Value</th>
+                    <th>%</th>
+                </tr>
+            </thead>
+            <tbody id="headers">
+            {% for header in headers %}
+                <tr>
+                    <td>{{ header[0] }}</td>
+                    <td id="{{ header[0] + "Val" }}">{{ header[1] }}</td>
+                    <td id="{{ header[0] + "Per" }}"></td>
+                </tr>
             {% endfor %}
-        {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading"><h2>JavaScript</h2></div>
+        <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Value</th>
+                    <th>%</th>
+                </tr>
+            </thead>
+            <tbody id="attributes">
+            {% for var in variables %}
+                {% for variable in var %}
+                <tr>
+                    <td>{{ variable }}</td>
+                    <td id="{{ variable + "Val" }}"></td>
+                    <td id="{{ variable + "Per" }}"></td>
+                </tr>
+                {% endfor %}
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
     <!-- Load the FP Central API -->
     <script type="text/javascript" src="{{ url_for('static', filename="js/clientAPI.js") }}"></script>
