--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     {%- endblock metas %}
 
     {%- block styles %}
