Adding support for localisation + adding FR translation

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% set navigation_bar = [
-    ('/', 'home', 'Home'),
-    ('/fp', 'fp', 'My fingerprint'),
-    ('/faq', 'faq', 'FAQ')
+    ('/', 'home', _('Home') ),
+    ('/fp', 'fp', _('My fingerprint') ),
+    ('/faq', 'faq', _('FAQ') )
 ] -%}
 {% set active_page = active_page|default('index') -%}
 
