--- a/templates/faq.html
+++ b/templates/faq.html
@@ -2,18 +2,18 @@
 {% set active_page = "faq" %}
 
 {% block title %}
-    FAQ - FP Central
+    {{ _('FAQ') }} - FP Central
 {% endblock %}
 
 {% block content %}
-    <h1>List of attributes</h1>
+    <h1>{{ _('List of attributes') }}</h1>
     <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
         <thead>
             <tr>
                 <th>#</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>URL</th>
+                <th>{{ _('Name') }}</th>
+                <th>{{ _('Description') }}</th>
+                <th>{{ _('URL') }}</th>
             </tr>
         </thead>
         <tbody>
