--- a/templates/home.html
+++ b/templates/home.html
@@ -2,23 +2,23 @@
 {% set active_page = "home" %}
 
 {% block title %}
-    Home - FP Central
+    {{ _('Home') }} - FP Central
 {% endblock %}
 {% block content %}
 
     <div class="jumbotron text-center">
       <img src="static/images/banner.png" class="img-responsive" alt="Responsive image">
-      <p>Welcome to FP Central! This website aims at studying the diversity of browser fingerprints and providing developers with data to help them design good defenses.
-         Contribute to the efforts by viewing your own browser fingerprint or consult the current statistics of data provided by users around the world!
+      <p>{{ _('Welcome to FP Central! This website aims at studying the diversity of browser fingerprints and providing developers with data to help them design good defenses.
+         Contribute to the efforts by viewing your own browser fingerprint or consult the current statistics of data provided by users around the world!') }}
       <p>
         <div class="alert alert-info">
-      <h2 class="">Beta version</h2>
-      <h4>This website is still in development. If you find any bugs, don't hesitate to report them on
-          <a href="https://github.com/plaperdr/fp-central"><strong>our official GitHub repository</strong></a>.
+      <h2 class="">{{ _('Beta version') }}</h2>
+      <h4>{{ _('This website is still in development. If you find any bugs, don\'t hesitate to report them on
+          <a href="https://github.com/plaperdr/fp-central"><strong>our official GitHub repository</strong></a>.')}}
       </h4>
     </div>
-        <a class="btn btn-lg btn-default" role="button" href="/fp">View my fingerprint</a>
-        <a class="btn btn-lg btn-default" role="button" href="/faq">FAQ</a>
+        <a class="btn btn-lg btn-default" role="button" href="/fp">{{ _('View my fingerprint') }}</a>
+        <a class="btn btn-lg btn-default" role="button" href="/faq">{{ _('FAQ') }}</a>
       </p>
     </div>
 {% endblock %}
