Adding a 'tor' page with a check for an acceptable fingerprint and detection of the level of the security slider

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% set navigation_bar = [
     ('/', 'home', _('Home') ),
     ('/fp', 'fp', _('My fingerprint') ),
+    ('/tor', 'tor', 'Tor' ),
     ('/faq', 'faq', _('FAQ') )
 ] -%}
 {% set active_page = active_page|default('index') -%}
