Adding an empty stats page

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
     ('/', 'home', _('Home') ),
     ('/fp', 'fp', _('My fingerprint') ),
     ('/tor', 'tor', 'Tor' ),
+    ('/stats', 'stats', 'Statistics' ),
     ('/faq', 'faq', _('FAQ') )
 ] -%}
 {% set active_page = active_page|default('index') -%}
