--- a/templates/fp.html
+++ b/templates/fp.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+    <h1>Dashboard</h1>
     <div class="btn-group btn-group-justified" role="group">
         <a id="runBtn" class="btn btn-info" type="button" onclick="api.run()"><span class="badge">1</span> <strong>{{ _('Run JavaScript tests') }}</strong></a>
         <a id="sendBtn" class="btn btn-info disabled" type="button" onclick="api.store()"><span class="badge">2</span> <strong>{{ _('Send to server') }}</strong></a>
@@ -14,6 +15,12 @@
 
     <br>
 
+    <h1>
+        Results &nbsp;
+        <a id="dlBtn" type="button" class="btn btn-default btn-md disabled">
+            <span class="glyphicon glyphicon-download" aria-hidden="true"></span> Download as JSON
+        </a>
+    </h1>
     <div class="panel panel-default">
         <div class="panel-heading"><h2>HTTP headers</h2></div>
         <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
