--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% set navigation_bar = [
     ('/', 'home', _('Home') ),
-    ('/fp', 'fp', _('My fingerprint') ),
+    ('/fpNoJS', 'fp', _('My fingerprint') ),
     ('/tor', 'tor', 'Tor' ),
     ('/stats', 'stats', 'Statistics' ),
     ('/faq', 'faq', _('FAQ') )
@@ -53,19 +53,24 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 {% for href, id, caption in navigation_bar %}
-                <li{% if id == active_page %} class="active"{% endif%}><a href="{{ href|e }}">{{ caption|e }}</a></li>
+                <li{% if id == active_page %} class="active"{% endif%}><a id="{{ id }}" href="{{ href|e }}">{{ caption|e }}</a></li>
                 {% endfor %}
               </ul>
             </div><!--/.nav-collapse -->
         </div>
     </nav>
     {%- endblock navbar %}
-         <div class="container-fluid">
-                <div class="col-lg-8 col-lg-offset-2">
-                    {% block content -%}
-                    {%- endblock content %}
-                </div>
-         </div>
+
+    <div class="container-fluid">
+        <div class="col-lg-8 col-lg-offset-2">
+            {% block content -%}
+            {%- endblock content %}
+        </div>
+    </div>
+
+    <script type="text/javascript">
+        document.getElementById("fp").href = "/fp";
+    </script>
 
     {%- endblock body %}
   </body>
