Adding rounding of percentages in the No JavaScript page

--- a/templates/fpNoJS.html
+++ b/templates/fpNoJS.html
@@ -22,7 +22,7 @@
                 <tr>
                     <td>{{ header[0] }}</td>
                     <td>{{ header[1] }}</td>
-                    <td>{{ header[2] }}</td>
+                    <td>{{ header[2] | round(2) }}</td>
                 </tr>
             {% endfor %}
             </tbody>
