Changing URL for the sliderMediumHigh script

--- a/templates/tor.html
+++ b/templates/tor.html
@@ -93,8 +93,7 @@
     </svg>
 
     <!-- URL to be changed for the production version -->
-    <script type="text/javascript" src="http://127.0.0.1:5000/static/js/sliderMediumHigh.js"></script>
-    <!-- script type="text/javascript" src="{{ url_for('static', filename="js/sliderMediumHigh.js", _scheme='http', _external=True) }}"></script-->
+    <script type="text/javascript" src="{{ url_for('static', filename="js/sliderMediumHigh.js", _scheme='http', _external=True) }}"></script>
 
     <!-- Load the acceptable and slider JS script -->
     <script type="text/javascript" src="{{ url_for('static', filename="js/acceptable.js") }}"></script>
