Adding more feedback on the number of collected fingerprints

--- a/templates/fp.html
+++ b/templates/fp.html
@@ -28,7 +28,7 @@
                 <tr>
                     <th>{{ _('Name') }}</th>
                     <th>{{ _('Value') }}</th>
-                    <th>%</th>
+                    <th><a href="#" id="httpPerHeader" data-toggle="tooltip">%</a></th>
                 </tr>
             </thead>
             <tbody id="headers">
@@ -52,7 +52,7 @@
                 <tr>
                     <th>{{ _('Name') }}</th>
                     <th>{{ _('Value') }}</th>
-                    <th>%</th>
+                    <th><a href="#" id="JSPerHeader" data-toggle="tooltip">%</a></th>
                 </tr>
             </thead>
             <tbody id="attributes">
