--- a/templates/fpNoJS.html
+++ b/templates/fpNoJS.html
@@ -14,7 +14,7 @@
                 <tr>
                     <th>{{ _('Name') }}</th>
                     <th>{{ _('Value') }}</th>
-                    <th>%</th>
+                    <th>% out of {{ nbFP }} fingerprints</th>
                 </tr>
             </thead>
             <tbody id="headers">
