--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,8 @@
     ('/', 'home', _('Home') ),
     ('/fpNoJS', 'fp', _('My fingerprint') ),
     ('/tor', 'tor', 'Tor' ),
-    ('/stats', 'stats', 'Statistics' ),
+    ('/globalStats', 'globalStats', 'Global statistics' ),
+    ('/customStats', 'customStats', 'Custom statistics' ),
     ('/faq', 'faq', _('FAQ') )
 ] -%}
 {% set active_page = active_page|default('index') -%}
