Improving tooltip on the graph in globalStats

--- a/templates/globalStats.html
+++ b/templates/globalStats.html
@@ -59,8 +59,7 @@
                     allowDecimals: false
                 },
                 tooltip: {
-                    headerFormat: '<b>{series.name}</b><br>',
-                    pointFormat: '{point.x:%e. %b}: {point.y:.0f} fingerprints'
+                    shared: true
                 },
 
                 plotOptions: {
