--- a/templates/globalStats.html
+++ b/templates/globalStats.html
@@ -24,8 +24,12 @@
 
     <br>
     <div id="daily" style="width:100%; height:500px;"></div>
+    <br>
+    <div id="lang" style="width:100%; height:500px;"></div>
 
     <script type="text/javascript">
+
+        //Daily graph
         var dailyFP = {{ dailyFP|safe }};
         var dailyData = [];
         var cumulativeData = [];
@@ -35,6 +39,13 @@
             dailyData.push([Date.UTC(d.year,d.month-1,d.day),dailyFP[i].count]);
             nbCounter += dailyFP[i].count;
             cumulativeData.push([Date.UTC(d.year,d.month-1,d.day),nbCounter])
+        }
+
+        //Language graph
+        var lang = {{ lang|safe }};
+        var langData = [];
+        for(var j=0; j<lang.length; j++){
+            langData.push({'name': lang[j]._id.substring(0,2), 'y': lang[j].count});
         }
 
         $(document).ready(function() {
@@ -69,7 +80,6 @@
                         }
                     }
                 },
-
                 series: [{
                     name: 'Daily fingerprints',
                     data: dailyData
@@ -78,7 +88,42 @@
                     data: cumulativeData
                 }]
             });
+
+            $('#lang').highcharts({
+                chart: {
+                    plotBackgroundColor: null,
+                    plotBorderWidth: null,
+                    plotShadow: false,
+                    type: 'pie'
+                },
+                title: {
+                    text: 'Language distribution'
+                },
+                tooltip: {
+                    pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b><br>{point.y} fingerprints'
+                },
+                plotOptions: {
+                    pie: {
+                        allowPointSelect: true,
+                        cursor: 'pointer',
+                        dataLabels: {
+                            enabled: true,
+                            format: '<b>{point.name}</b>: {point.percentage:.1f} %',
+                            style: {
+                                color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
+                            }
+                        }
+                    }
+                },
+                series: [{
+                    name: 'Language',
+                    colorByPoint: true,
+                    data: langData
+                }]
+            });
+
         });
+
     </script>
 
     <!-- Load the external libraries -->
