--- a/templates/customStats.html
+++ b/templates/customStats.html
@@ -7,7 +7,7 @@
 
 {% block styles %}
     {{ super() }}
-    <link href="{{url_for('static', filename='css/bootstrap-slider.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/daterangepicker.css')}}" rel="stylesheet">
 {%  endblock %}
 
 {% block content %}
@@ -29,6 +29,9 @@
             Select the versions of the Tor browser
         </span>
     </h2>
+    {%  for tag in tags %}
+        <h1>{{ tag }}</h1>
+    {%  endfor %}
 
     <h2>
         <span class="label label-info">
@@ -89,13 +92,12 @@
         </span>
     </h2>
     <br>
-    <div style="margin-left: 30px; margin-top: 15px">
-        <input  type="text" id="period" style="width: 500px;"
-            data-provide="slider"  data-slider-ticks="[1, {{ lifetimeDays }}]" data-slider-ticks-labels='["Past day", "Lifetime"]'
-            data-slider-min="1" data-slider-max="{{ lifetimeDays }}" data-slider-step="1"  data-slider-value="{{ lifetimeDays }}"
-            ticks_positions="[0, {{ lifetimeDays }}]">
-    </div>
-
+    Fingerprints collected between &nbsp;
+    <span id="period" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc;">
+        <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
+        <span></span> <b class="caret"></b>
+    </span>
+    <br><br>
     <h2>
         <span class="label label-info">
             <span style="background-color: white; color: #29ABE0" class="badge">4</span>
@@ -117,7 +119,8 @@
 
     <!-- Load the API and the slider -->
     <script type="text/javascript" src="{{ url_for('static', filename="js/customStatsAPI.js") }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename="js/bootstrap-slider.min.js") }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename="js/moment.min.js") }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename="js/daterangepicker.js") }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename="js/highcharts.js") }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename="js/highcharts-exporting.js") }}"></script>
 
