Fixing phrasing for the custom stats page

--- a/templates/customStats.html
+++ b/templates/customStats.html
@@ -88,7 +88,7 @@
     <h2>
         <span class="label label-info">
             <span style="background-color: white; color: #29ABE0" class="badge">3</span>
-            Select the time period
+            Select the collection period
         </span>
     </h2>
     <br>
@@ -105,7 +105,7 @@
         </span>
     </h2>
     <a id="submitBtn" tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" onclick="api.sendRequest()"
-       title="Attributes missing" data-content="You need to select at least one attribute to show the graph.">
+       title="Attributes missing" data-content="You need to select at least one attribute to see the graph.">
         <strong>Submit</strong>
     </a>
 
