Updating comments in customStats HTML file

--- a/templates/customStats.html
+++ b/templates/customStats.html
@@ -15,13 +15,12 @@
 
     <h1>Custom statistics</h1>
     <!--
+        - Select the tags you are interest in
         - Select the browsers you want to study
         - Select the attributes you want to use (can be one or more)
-        - Have a slider for the period of days you want to take into account
+        - Select the time period when the fingerprints were collected
         - Get the popular values for the combination attributes/period
-        - Have the choice between a pie chart or ordered horizontal bar chart
-
-        - For future development, have the option to select defined tags
+        - Get the popular values on a graph and the detailed data in a table
     -->
 
     <h2>
